--- a/Preprocessing_Linearregression_AP.ipynb
+++ b/Preprocessing_Linearregression_AP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[565968 rows x 13 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,9 +712,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>markdownmean</th>\n",
+       "      <th>weekly_sales</th>\n",
+       "      <th>isholiday</th>\n",
+       "      <th>store</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2697.742</td>\n",
+       "      <td>468.42</td>\n",
+       "      <td>False</td>\n",
+       "      <td>16</td>\n",
+       "      <td>29.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147533</th>\n",
+       "      <td>4490.392</td>\n",
+       "      <td>24848.39</td>\n",
+       "      <td>False</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363402</th>\n",
+       "      <td>13231.586</td>\n",
+       "      <td>10305.28</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>48.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147629</th>\n",
+       "      <td>4490.392</td>\n",
+       "      <td>23011.67</td>\n",
+       "      <td>False</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147725</th>\n",
+       "      <td>4490.392</td>\n",
+       "      <td>4116.93</td>\n",
+       "      <td>False</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        markdownmean  weekly_sales  isholiday  store  temperature\n",
+       "62          2697.742        468.42      False     16        29.56\n",
+       "147533      4490.392      24848.39      False     40        40.75\n",
+       "363402     13231.586      10305.28      False     28        48.76\n",
+       "147629      4490.392      23011.67      False     40        40.75\n",
+       "147725      4490.392       4116.93      False     40        40.75"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use Pandas get_dummies to convert categorical data\n",
     "\n",
@@ -724,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -759,15 +846,12 @@
        "      <th>sale_date</th>\n",
        "      <th>store</th>\n",
        "      <th>temperature</th>\n",
-       "      <th>fuel_price</th>\n",
        "      <th>markdown1</th>\n",
        "      <th>markdown2</th>\n",
        "      <th>markdown3</th>\n",
        "      <th>markdown4</th>\n",
        "      <th>markdown5</th>\n",
-       "      <th>unemployment</th>\n",
        "      <th>isholiday</th>\n",
-       "      <th>dept</th>\n",
        "      <th>weekly_sales</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -778,11 +862,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sale_date, store, temperature, fuel_price, markdown1, markdown2, markdown3, markdown4, markdown5, unemployment, isholiday, dept, weekly_sales]\n",
+       "Columns: [sale_date, store, temperature, markdown1, markdown2, markdown3, markdown4, markdown5, isholiday, weekly_sales]\n",
        "Index: []"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +956,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
