completed linear regression

--- a/Preprocessing_Linearregression_AP.ipynb
+++ b/Preprocessing_Linearregression_AP.ipynb
@@ -17,12 +17,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**CLEANING DATA**"
+    "Goals:\n",
+    "* Cleaning dataframe by dropping any null columns, selecting columns that will be used for model, creating timestamp\n",
+    "   for sale_date and using it to produce new columns for 'month' and 'year', and replacing all 0s and np NaN's with the mean of each column.\n",
+    "* Creating bar chart that will show each stores average sales in the years of 2011 and 2012.Which will later be used for KNN Algorithm.\n",
+    "* Splitting and scaling data.\n",
+    "* Preprocessing data.\n",
+    "* Creating linear regression model and make prediction on how markdowns effect weekly sales.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CLEANING DATA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +309,7 @@
        "[565968 rows x 13 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,11 +358,7 @@
     "df = df.dropna(axis='columns', how='all')\n",
     "# Dropping the null rows\n",
     "df = df.dropna()\n",
-    "df.head()\n",
-    "#Getting rid of space on FALSE_POSITIVES\n",
-    "df.replace(to_replace =\"FALSE POSITIVE\", \n",
-    "                 value =\"FALSE_POSITIVE\",\n",
-    "          inplace=True)"
+    "df.head()\n"
    ]
   },
   {
@@ -1457,7 +1466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**CREATING BAR CHART TO EVALUATE AVERAGE YEARLY SALES BY STORE**"
+    "## CREATING BAR CHART TO EVALUATE AVERAGE YEARLY SALES BY STORE"
    ]
   },
   {
@@ -1511,16 +1520,16 @@
    "source": [
     "From this bar graph I am gathering which stores have the greatest and least average yearly sales for the years 2011 \n",
     "and 2012. I am chosing 5 stores for my machine learning linear regression off of this chart.\n",
-    "1.The top 2 stores with max sales\n",
-    "2.The top 2 stores with min sales\n",
-    "3.One store with average sales "
+    "1. The top 2 stores with max sales(*10,14*).\n",
+    "2. The top 2 stores with min sales (*5,33*).\n",
+    "3. One store with average sales (*28*)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**PREPROCESSING**"
+    "## PREPROCESSING"
    ]
   },
   {
@@ -1770,7 +1779,7 @@
     }
    ],
    "source": [
-    "#Use conditional to locate all rows after November 4th 2011\n",
+    "#Use conditional to locate all rows after November 4th 2011 since markdown values are only availible then.\n",
     "new_df = df.loc[df[\"sale_date\"]> \"2011-11-04\" ]\n",
     "new_df"
    ]
@@ -2682,7 +2691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SPLITTING AND SCALING DATA**"
+    "## SPLITTING AND SCALING DATA"
    ]
   },
   {
@@ -2737,6 +2746,13 @@
     "X_test_scaled = X_scaler.transform(X_test)\n",
     "y_train_scaled = y_scaler.transform(y_train)\n",
     "y_test_scaled = y_scaler.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CREATE LINEAR REGRESSION MODEL AND MAKE PREDICTION USING FITTED MODEL"
    ]
   },
   {
@@ -2831,7 +2847,7 @@
    "metadata": {},
    "source": [
     "**R2**\n",
-    "* The R2 result in this model shows that 72% of the variance in whether it is a holiday or not is explained by markdowns and weekly sales.\n"
+    "* The R2 result in this model shows that 74% of the variance for weekly sales is explained by markdowns and weekly sales.\n"
    ]
   },
   {
