--- a/KNN_Markdowns_AP.ipynb
+++ b/KNN_Markdowns_AP.ipynb
@@ -22,12 +22,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Goals:**\n",
+    "* Cleaning data frame by dropping null rows, dropping unnecesary columns, and selecting necessary rows.\n",
+    "* Preprocessing data and grouping dataframe by top two max sales min sales and 1 average sale.\n",
     "The goal of this KNN Algorithm is to predict whether stores have more markdowns and sales on holidays v.s not on holidays"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CLEANING DATA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +301,7 @@
        "[565968 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,24 +313,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>store</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>fuel_price</th>\n",
+       "      <th>markdown1</th>\n",
+       "      <th>markdown2</th>\n",
+       "      <th>markdown3</th>\n",
+       "      <th>markdown4</th>\n",
+       "      <th>markdown5</th>\n",
+       "      <th>unemployment</th>\n",
+       "      <th>isholiday</th>\n",
+       "      <th>dept</th>\n",
+       "      <th>weekly_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2011-11-11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>29.56</td>\n",
+       "      <td>3.505</td>\n",
+       "      <td>5042.40</td>\n",
+       "      <td>2193.04</td>\n",
+       "      <td>200.11</td>\n",
+       "      <td>3309.98</td>\n",
+       "      <td>2743.18</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>468.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>2011-11-18</td>\n",
+       "      <td>16</td>\n",
+       "      <td>31.73</td>\n",
+       "      <td>3.479</td>\n",
+       "      <td>2089.46</td>\n",
+       "      <td>154.21</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>830.60</td>\n",
+       "      <td>4425.07</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>279.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2011-11-25</td>\n",
+       "      <td>16</td>\n",
+       "      <td>31.39</td>\n",
+       "      <td>3.424</td>\n",
+       "      <td>90.28</td>\n",
+       "      <td>126.47</td>\n",
+       "      <td>34754.69</td>\n",
+       "      <td>24.64</td>\n",
+       "      <td>1560.32</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28</td>\n",
+       "      <td>349.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>2011-12-23</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20.79</td>\n",
+       "      <td>3.173</td>\n",
+       "      <td>485.00</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>475.60</td>\n",
+       "      <td>16.20</td>\n",
+       "      <td>960.85</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>575.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2011-12-30</td>\n",
+       "      <td>16</td>\n",
+       "      <td>23.91</td>\n",
+       "      <td>3.119</td>\n",
+       "      <td>921.67</td>\n",
+       "      <td>11778.68</td>\n",
+       "      <td>101.87</td>\n",
+       "      <td>272.51</td>\n",
+       "      <td>1673.25</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28</td>\n",
+       "      <td>685.46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sale_date  store  temperature  fuel_price  markdown1  markdown2  \\\n",
+       "62  2011-11-11     16        29.56       3.505    5042.40    2193.04   \n",
+       "63  2011-11-18     16        31.73       3.479    2089.46     154.21   \n",
+       "64  2011-11-25     16        31.39       3.424      90.28     126.47   \n",
+       "66  2011-12-23     16        20.79       3.173     485.00       0.18   \n",
+       "67  2011-12-30     16        23.91       3.119     921.67   11778.68   \n",
+       "\n",
+       "    markdown3  markdown4  markdown5  unemployment  isholiday  dept  \\\n",
+       "62     200.11    3309.98    2743.18         6.232      False    28   \n",
+       "63       3.55     830.60    4425.07         6.232      False    28   \n",
+       "64   34754.69      24.64    1560.32         6.232       True    28   \n",
+       "66     475.60      16.20     960.85         6.232      False    28   \n",
+       "67     101.87     272.51    1673.25         6.232       True    28   \n",
+       "\n",
+       "    weekly_sales  \n",
+       "62        468.42  \n",
+       "63        279.22  \n",
+       "64        349.09  \n",
+       "66        575.78  \n",
+       "67        685.46  "
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dropping the null columns where all values are null\n",
     "df = df.dropna(axis='columns', how='all')\n",
     "# Dropping the null rows\n",
     "df = df.dropna()\n",
-    "df.head()\n",
-    "#Getting rid of space on FALSE_POSITIVES\n",
-    "df.replace(to_replace =\"FALSE POSITIVE\", \n",
-    "                 value =\"FALSE_POSITIVE\",\n",
-    "          inplace=True)"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +700,7 @@
        "[149916 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,34 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1078"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df['markdownmean'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +833,7 @@
        "67        685.46  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,8 +845,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PREPROCESSING"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -909,20 +1044,20 @@
        "[15314 rows x 8 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_sales= freshy[freshy['store'].isin([10, 14,5,33,28])] \n",
+    "sales= freshy[freshy['store'].isin([10, 14,5,33,28])] \n",
     "\n",
-    "top_sales"
+    "sales"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +1077,7 @@
        "Name: isholiday, dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1192,7 @@
        "77462      43037.04  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,8 +1203,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SPLITTING AND CLASSIFYING DATA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,14 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1251,7 @@
        "61.87891401761993"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,28 +1264,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Defining model\n",
-    "classifier= KNeighborsClassifier(n_neighbors= 45, p=2, metric= 'euclidean')"
+    "classifier= KNeighborsClassifier(n_neighbors= 61, p=2, metric= 'euclidean')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='euclidean',\n",
-       "                     metric_params=None, n_jobs=None, n_neighbors=45, p=2,\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=61, p=2,\n",
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,8 +1296,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CREATE KNN MODEL AND MAKE PREDICTIONS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1180,8 +1322,8 @@
      "output_type": "stream",
      "text": [
       "[[3510    0]\n",
-      " [  26  293]]\n",
-      "0.9575163398692811\n"
+      " [  30  289]]\n",
+      "0.950657894736842\n"
      ]
     }
    ],
@@ -1194,14 +1336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9932097153303735\n"
+      "0.9921650561504309\n"
      ]
     }
    ],
@@ -1210,18 +1352,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "According to the confusion matrix we can see that 34552 of predicted sales and markdowns are not on holidays and 450 are on holidays.\n",
-    "Furthermore, there are 365 sales and markdowns on holidays and 2112 sales and markdowns not on holidays that are incorrect. \n",
-    "The f_1 score is at a 27% accuracy which is very low. \n",
-    "However, the accuracy score is at 93% which is pretty high. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1303,11 +1435,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* According to the confusion matrix we can see that 3510 of predicted sales and markdowns are not on holidays and 289 are on holidays. Furthermore, there are 30 sales and markdowns not on holidays that are incorrect. The f_1 score is at a 95% accuracy and the accuracy score is at 99% which is really high. \n",
+    "* According to the KNN algorithm our model is at 99% accuracy. However, it could be that the data was overfitted.\n"
+   ]
   },
   {
    "cell_type": "code",
