--- a/Preprocessing_Linearregression_AP.ipynb
+++ b/Preprocessing_Linearregression_AP.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "Goals:\n",
-    "* Cleaning dataframe by dropping any null columns, selecting columns that will be used for model, creating timestamp\n",
+    "* Cleaning dataframe by dropping any null rows, selecting columns that will be used for model, creating timestamp\n",
     "   for sale_date and using it to produce new columns for 'month' and 'year', and replacing all 0s and np NaN's with the mean of each column.\n",
     "* Creating bar chart that will show each stores average sales in the years of 2011 and 2012.Which will later be used for KNN Algorithm.\n",
     "* Splitting and scaling data.\n",
@@ -2847,7 +2847,7 @@
    "metadata": {},
    "source": [
     "**R2**\n",
-    "* The R2 result in this model shows that 74% of the variance for weekly sales is explained by markdowns and weekly sales.\n"
+    "* The R2 result in this model shows that 74% of the variance for weekly sales is explained by markdowns.\n"
    ]
   },
   {
@@ -2855,7 +2855,7 @@
    "metadata": {},
    "source": [
     "**Mean Standard Error**\n",
-    "* The MSE in this model shows that there is only 27% error."
+    "* The MSE in this model shows that there is only 38% error."
    ]
   },
   {
