--- a/KNN_Markdowns_AP.ipynb
+++ b/KNN_Markdowns_AP.ipynb
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1404,6 +1404,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1411,7 +1420,8 @@
     "plt.plot(range(1, 20, 2), test_scores, marker=\"x\")\n",
     "plt.xlabel(\"k neighbors\")\n",
     "plt.ylabel(\"Testing accuracy Score\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig('Images/KNN_results.png')"
    ]
   },
   {
