added new files for webpage

--- a/Preprocessing_Linearregression_AP.ipynb
+++ b/Preprocessing_Linearregression_AP.ipynb
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1491,6 +1491,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1511,7 +1520,8 @@
     "ax.set_ylabel('Average sales (year)')\n",
     "\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig('Images/Bar_chart.jpg')\n"
    ]
   },
   {
@@ -2780,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -2794,6 +2804,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2806,7 +2825,8 @@
     "plt.legend()\n",
     "plt.hlines(y=0, xmin=y_test_scaled.min(), xmax=y_test_scaled.max())\n",
     "plt.title(\"Residual Plot\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "plt.savefig('Images/Linearregression_residualplot.jpg')\n"
    ]
   },
   {
