--- a/KNN_Markdowns_AP.ipynb
+++ b/KNN_Markdowns_AP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "[565968 rows x 13 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "67        685.46  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "[149916 rows x 10 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "67        685.46  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "[15314 rows x 8 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,16 +1057,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = top_sales[\"isholiday\"]\n"
+    "y = sales[\"isholiday\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1077,18 +1077,18 @@
        "Name: isholiday, dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_sales['isholiday'].value_counts()"
+    "sales['isholiday'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1192,13 +1192,13 @@
        "77462      43037.04  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = top_sales.drop(\"isholiday\", axis=1)\n",
+    "X = sales.drop(\"isholiday\", axis=1)\n",
     "X.head()"
    ]
   },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
        "61.87891401761993"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,17 +1304,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, ..., False,  True, False])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Predicting the test set results\n",
-    "y_pred= classifier.predict(X_test)"
+    "y_pred= classifier.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1334,8 @@
      "text": [
       "[[3510    0]\n",
       " [  30  289]]\n",
-      "0.950657894736842\n"
+      "0.950657894736842\n",
+      "0.9921650561504309\n"
      ]
     }
    ],
@@ -1331,12 +1343,13 @@
     "#Evaluating model\n",
     "cm= confusion_matrix(y_test,y_pred)\n",
     "print(cm)\n",
-    "print(f1_score(y_test, y_pred))"
+    "print(f1_score(y_test, y_pred))\n",
+    "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1404,15 +1417,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1420,13 +1424,14 @@
     "plt.plot(range(1, 20, 2), test_scores, marker=\"x\")\n",
     "plt.xlabel(\"k neighbors\")\n",
     "plt.ylabel(\"Testing accuracy Score\")\n",
-    "plt.show()\n",
-    "plt.savefig('Images/KNN_results.png')"
+    "\n",
+    "plt.savefig('Images/KNN_results.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1451,6 +1456,13 @@
     "* According to the confusion matrix we can see that 3510 of predicted sales and markdowns are not on holidays and 289 are on holidays. Furthermore, there are 30 sales and markdowns not on holidays that are incorrect. The f_1 score is at a 95% accuracy and the accuracy score is at 99% which is really high. \n",
     "* According to the KNN algorithm our model is at 99% accuracy. However, it could be that the data was overfitted.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
