--- a/Preprocessing_Linearregression_AP.ipynb
+++ b/Preprocessing_Linearregression_AP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "[565968 rows x 13 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "(565968, 13)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,9 +350,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>store</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>fuel_price</th>\n",
+       "      <th>markdown1</th>\n",
+       "      <th>markdown2</th>\n",
+       "      <th>markdown3</th>\n",
+       "      <th>markdown4</th>\n",
+       "      <th>markdown5</th>\n",
+       "      <th>unemployment</th>\n",
+       "      <th>isholiday</th>\n",
+       "      <th>dept</th>\n",
+       "      <th>weekly_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2011-11-11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>29.56</td>\n",
+       "      <td>3.505</td>\n",
+       "      <td>5042.40</td>\n",
+       "      <td>2193.04</td>\n",
+       "      <td>200.11</td>\n",
+       "      <td>3309.98</td>\n",
+       "      <td>2743.18</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>468.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>2011-11-18</td>\n",
+       "      <td>16</td>\n",
+       "      <td>31.73</td>\n",
+       "      <td>3.479</td>\n",
+       "      <td>2089.46</td>\n",
+       "      <td>154.21</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>830.60</td>\n",
+       "      <td>4425.07</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>279.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2011-11-25</td>\n",
+       "      <td>16</td>\n",
+       "      <td>31.39</td>\n",
+       "      <td>3.424</td>\n",
+       "      <td>90.28</td>\n",
+       "      <td>126.47</td>\n",
+       "      <td>34754.69</td>\n",
+       "      <td>24.64</td>\n",
+       "      <td>1560.32</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28</td>\n",
+       "      <td>349.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>2011-12-23</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20.79</td>\n",
+       "      <td>3.173</td>\n",
+       "      <td>485.00</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>475.60</td>\n",
+       "      <td>16.20</td>\n",
+       "      <td>960.85</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>575.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2011-12-30</td>\n",
+       "      <td>16</td>\n",
+       "      <td>23.91</td>\n",
+       "      <td>3.119</td>\n",
+       "      <td>921.67</td>\n",
+       "      <td>11778.68</td>\n",
+       "      <td>101.87</td>\n",
+       "      <td>272.51</td>\n",
+       "      <td>1673.25</td>\n",
+       "      <td>6.232</td>\n",
+       "      <td>True</td>\n",
+       "      <td>28</td>\n",
+       "      <td>685.46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sale_date  store  temperature  fuel_price  markdown1  markdown2  \\\n",
+       "62  2011-11-11     16        29.56       3.505    5042.40    2193.04   \n",
+       "63  2011-11-18     16        31.73       3.479    2089.46     154.21   \n",
+       "64  2011-11-25     16        31.39       3.424      90.28     126.47   \n",
+       "66  2011-12-23     16        20.79       3.173     485.00       0.18   \n",
+       "67  2011-12-30     16        23.91       3.119     921.67   11778.68   \n",
+       "\n",
+       "    markdown3  markdown4  markdown5  unemployment  isholiday  dept  \\\n",
+       "62     200.11    3309.98    2743.18         6.232      False    28   \n",
+       "63       3.55     830.60    4425.07         6.232      False    28   \n",
+       "64   34754.69      24.64    1560.32         6.232       True    28   \n",
+       "66     475.60      16.20     960.85         6.232      False    28   \n",
+       "67     101.87     272.51    1673.25         6.232       True    28   \n",
+       "\n",
+       "    weekly_sales  \n",
+       "62        468.42  \n",
+       "63        279.22  \n",
+       "64        349.09  \n",
+       "66        575.78  \n",
+       "67        685.46  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dropping the null columns where all values are null\n",
     "df = df.dropna(axis='columns', how='all')\n",
@@ -363,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +521,7 @@
        "(149916, 13)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +796,7 @@
        "[149916 rows x 13 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +1056,7 @@
        "[149916 rows x 12 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1312,7 @@
        "[149916 rows x 12 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1584,7 @@
        "4            36566.827333"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1491,15 +1640,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1520,8 +1660,9 @@
     "ax.set_ylabel('Average sales (year)')\n",
     "\n",
     "\n",
-    "plt.show()\n",
-    "plt.savefig('Images/Bar_chart.jpg')\n"
+    "\n",
+    "plt.savefig('Images/Bar_chart.jpg')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -1544,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1924,7 @@
        "[149916 rows x 12 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1946,7 @@
        "12"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1827,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +2090,7 @@
        "147725      False     40        40.75     11  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2089,7 +2230,7 @@
        "5      2041.105948  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2102,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2781,7 @@
        "45      3669.951424  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2654,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2685,7 +2826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2706,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2720,7 +2861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2733,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2746,7 +2887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2917,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2804,15 +2945,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2825,13 +2957,13 @@
     "plt.legend()\n",
     "plt.hlines(y=0, xmin=y_test_scaled.min(), xmax=y_test_scaled.max())\n",
     "plt.title(\"Residual Plot\")\n",
-    "plt.show()\n",
-    "plt.savefig('Images/Linearregression_residualplot.jpg')\n"
+    "plt.savefig('Images/Linearregression_residualplotAP.jpg')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
